--- a/templates/searchResult.html
+++ b/templates/searchResult.html
@@ -1,19 +1,16 @@
 {% for num in pet %}
-    Advetisement ID: {{num._id}} <br>
+    Advertisement ID: {{num._id}} <br>
     Pet Name: {{num.petName}} <br>
     Pet Category: {{num.petCat}} <br>
     Gender: {{num.gender}} <br>
     Color: {{num.color}} <br>
     Age: {{num.age}} <br>
-    Description: {{num.description}}<br><br>
-    =========================
+    Description: {{num.description}}<br>
     {% for row in user %}
-        {% if row.advID == num._id %}
-            Posted by: {{ row.userName }}<br>
-            Email: {{ row.userEmail }}<br>
-            Contact: {{ row.userContact }}<br><br>
-        {%endif %}
+        {% if num.user_id == row._id %}
+        Posted by: {{ row.userName }}<br>
+        Email: {{ row.userEmail }}<br>
+        Contact: {{ row.userContact }}<br><br>
+        {% endif %}
     {% endfor %}   
-    
-    =======================
 {% endfor %}
