--- a/templates/SearchPage.html
+++ b/templates/SearchPage.html
@@ -1,4 +1,4 @@
-        <a href="{{url_for('add_adv')}}" >Add Advertisment</a>&nbsp &nbsp
+        <a href="{{url_for('add_user')}}" >Add User</a>&nbsp &nbsp
         <a href="{{url_for('login')}}" >Login</a><br><br>
         
         <form action="{{url_for('showsearch')}}" method="POST" >
