--- a/templates/mylogin.html
+++ b/templates/mylogin.html
@@ -1,8 +1,8 @@
- <form action="{{url_for('update_adv')}}" method="POST">
+ <form action="{{url_for('update_user')}}" method="POST">
      <div>
          {% for num in user%}
          <label>User ID</label>
-          <input id="userid" name="userid" type="text" value={{num._id}} ><br>
+          <input id="user_id" name="user_id" type="text" value={{num._id}} ><br>
           <label>User Name</label>
           <input id="myName" name="myName" type="text" value={{num.userName}} ><br
           <label>User Email</label>
@@ -11,9 +11,8 @@
           <input id="myContact" name="myContact" type="text" value={{num.userContact}} ><br>
      
           <div>
-            <button type="submit" name="action">Update</button>
-            <a href="{{url_for('delete_adv', user_id=num._id)}}" >Delete</a>&nbsp &nbsp
-            <a href="{{url_for('add_adv', user_id=num._id)}}" >Add Advertisement</a>
+            <button type="submit" name="action">Update My Details</button>
+            <a href="{{url_for('my_adv', user_id=num._id)}}" >My Advertisement</a>&nbsp &nbsp
           </div>
           {% endfor %}
      </div>         
