--- a/templates/deleteAdv.html
+++ b/templates/deleteAdv.html
@@ -1,7 +1,7 @@
  <form action="{{url_for('delete_adv2')}}" method="POST">
      <div>
-         <label>Recipe ID</label>
-          <input id="myid" name="myid" type="text" value={{user_id}} ><br>
+         <label>Advetisement ID</label>
+          <input id="adv_id" name="adv_id" type="text" value={{adv_id}} ><br>
      </div>         
     <div>
         <button type="submit" name="action">Delete</button>
