resolve bug in delete advertisment function

--- a/templates/deleteAdv.html
+++ b/templates/deleteAdv.html
@@ -4,7 +4,7 @@
           <input id="adv_id" name="adv_id" type="text" value={{adv_id}} ><br>
      </div>         
     <div>
-        <button type="submit" name="action">Delete</button>
+        <button type="submit" name="action">Confirm Delete?</button>
     </div>
  </form>
   
