--- a/templates/SearchPage.html
+++ b/templates/SearchPage.html
@@ -1,5 +1,5 @@
-        <a href="{{url_for('add_user')}}" >Add User</a>&nbsp &nbsp
-        <a href="{{url_for('login')}}" >Login</a><br><br>
+        <button type="button" onclick="window.location.href='{{url_for('add_user')}}'" >Add User</button>&nbsp &nbsp
+        <button type="button" onclick="window.location.href='{{url_for('login')}}'">Login</button><br><br>
         
         <form action="{{url_for('showsearch')}}" method="POST" >
             <div>
