--- a/templates/login.html
+++ b/templates/login.html
@@ -1,8 +1,8 @@
-
-        <form action="{{url_for('mylogin')}}" method="POST" >
-            <div>
-              <label>Key in your user name:</label>
-              <input  id="login" name="login" type="text">
-              <button type="submit" name="action">Login</button>
-            </div>
-        </form>
+<!--Form for user to Log in their account-->
+<form action="{{url_for('mylogin')}}" method="POST" >
+    <div>
+        <label>Key in your user name:</label>
+        <input  id="login" name="login" type="text">
+        <button type="submit" name="action">Login</button>
+    </div>
+</form>
