--- a/templates/add_user.html
+++ b/templates/add_user.html
@@ -1,4 +1,5 @@
- <form action="{{ url_for('insert_user') }}" method="POST" >
+<!--Form for user to enter their particular to sign up account-->
+<form action="{{ url_for('insert_user') }}" method="POST" >
      <div>
         <label>User Name</label>
         <input id="userName" name="userName" type="text"><br>
@@ -7,7 +8,9 @@
         <label>User Contact</label>
         <input id="userContact" name="userContact" type="text"><br>
     </div>
+    
     <div>
+        <!--Button to add new user account-->
         <button type="submit" name="action">Add User</button>
     </div>
- </form>
+</form>
