--- a/templates/my_adv.html
+++ b/templates/my_adv.html
@@ -1,30 +1,33 @@
- <form action="{{url_for('update_adv')}}" method="POST">
-     <div>
-         {% for num in pet%}
-          <label>Advertisement ID</label>
-          <input id="adv_id" name="adv_id" type="text" value={{num._id}} ><br>
-          <label>User ID</label>
-          <input id="user_id" name="user_id" type="text" value={{num.user_id}} ><br>
-          <label>Pet Name</label>
-          <input id="petName" name="petName" type="text" value={{num.petName}} ><br>
-          <label>Pet Category</label>
-          <input id="petCat" name="petCat" type="text" value={{num.petCat}} ><br>
-          <label>Gender</label>
-          <input id="gender" name="gender" type="text" value={{num.gender}} ><br>
-          <label>Color</label>
-          <input id="color" name="color" type="text" value={{num.color}} ><br>
-          <label>Age</label>
-          <input id="age" name="age" type="text" value={{num.age}} ><br>
-          <label>Description</label>
-          <input id="description" name="description" type="text" value={{num.description}} ><br>
+ <!--Display the advertisment posted by the user based on User ID-->
+ 
+<form action="{{url_for('update_adv')}}" method="POST">
+    <div>
+        {% for num in pet%}
+            <input id="adv_id" name="adv_id" type="text" value={{num._id}} ><br>
+            <label>User ID</label>
+            <input id="user_id" name="user_id" type="text" value={{num.user_id}} ><br>
+            <label>Pet Name</label>
+            <input id="petName" name="petName" type="text" value={{num.petName}} ><br>
+            <label>Pet Category</label>
+            <input id="petCat" name="petCat" type="text" value={{num.petCat}} ><br>
+            <label>Gender</label>
+            <input id="gender" name="gender" type="text" value={{num.gender}} ><br>
+            <label>Color</label>
+            <input id="color" name="color" type="text" value={{num.color}} ><br>
+            <label>Age</label>
+            <input id="age" name="age" type="text" value={{num.age}} ><br>
+            <label>Description</label>
+            <input id="description" name="description" type="text" value={{num.description}} ><br>
      
-          <div>
-            <button type="submit" name="action">Update Advertisement</button>
-            <button type="button" onclick="window.location.href='{{url_for('delete_adv', adv_id=num._id)}}'" >Delete</button>&nbsp &nbsp
-          </div>
-          {% endfor %}
-     </div>         
-    
+            <div>
+                <!--Button for user to update their advertisment-->
+                <button type="submit" name="action">Update Advertisement</button>
+            
+                <!--Button for user to go to Delete Advertisement page-->
+                <button type="button" onclick="window.location.href='{{url_for('delete_adv', adv_id=num._id)}}'" >Delete</button>&nbsp &nbsp
+            </div>
+        {% endfor %}
+    </div>         
  </form>
 
 
