--- a/templates/add_adv.html
+++ b/templates/add_adv.html
@@ -1,20 +1,26 @@
 <!--Form for user to add in new Advertisment-->
 <form action="{{ url_for('insert_adv') }}" method="POST">
     <div>
-        <label>User ID</label>
-        <input id="userID" name="userID" type="text" value={{user_id}}><br>
-        <label>Pet Name</label>
-        <input id="petName" name="petName" type="text"><br>
-        <label>Pet Category</label>
-        <input id="petCat" name="petCat" type="text"><br>
-        <label>Gender</label>
-        <input id="gender" name="gender" type="text"><br>
-        <label>Color</label>
-        <input id="color" name="color" type="text"><br>
-        <label>Age</label>
-        <input id="age" name="age" type="text"><br>
-        <label>Description</label>
-        <input id="description" name="description" type="text"><br>
+        <label>User ID: </label>
+        <input id="userID" name="userID" type="text" value={{user_id}} disabled><br>
+        <label>Pet Name: </label>
+        <input id="petName" name="petName" type="text" required><br>
+        <label>Pet Category: </label>
+        <input id="petCat" name="petCat" type="text" required><br>
+        <label>Gender: </label>
+        <input id="gender" name="gender" type="text" required><br>
+        <label>Color: </label>
+        <input id="color" name="color" type="text" required><br>
+        <label>Age: </label>
+        <input id="age" name="age" type="text" required><br>
+        <label>Description: </label>
+        <input id="description" name="description" type="text" required><br>
+        
+        <label>Upload Photo</label>
+        <form method=post enctype=multipart/form-data>
+          <input type=file name=file>
+          <input type=submit value=Upload>
+        </form>
     </div>
     
     <div>
