--- a/templates/add_user.html
+++ b/templates/add_user.html
@@ -1,16 +1,69 @@
-<!--Form for user to enter their particular to sign up account-->
-<form action="{{ url_for('insert_user') }}" method="POST" >
-     <div>
-        <label>User Name</label>
-        <input id="userName" name="userName" type="text"><br>
-        <label>User Email</label>
-        <input id="userEmail" name="userEmail" type="text"><br>
-        <label>User Contact</label>
-        <input id="userContact" name="userContact" type="text"><br>
+<!doctype html>
+<html lang="en">
+    
+  <head>
+    <!-- Required meta tags -->
+    <meta charset="utf-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
+
+    <!-- Bootstrap CSS -->
+    <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.4.1/css/bootstrap.min.css" integrity="sha384-Vkoo8x4CGsO3+Hhxv8T/Q5PaXtkKtu6ug5TOeNV6gBiFeWPGFN9MuhOf23Q9Ifjh" crossorigin="anonymous">
+
+    <!-- My Style CSS -->
+    <link rel="stylesheet" type="text/css" href="{{url_for('static', filename='/css/style.css')}}">
+
+    
+    <title>A Helping Paw</title>
+  </head>
+  
+  <body>
+    <div class="container mt-5 mb-4" >
+        <div class="row">
+            <div class="col-md-1 d-flex justify-content-center">
+                <image src ="{{ url_for('static', filename='image/Logo.png')}}" width="100" height="100">
+            </div>
+            <div class="col-md-4 navbar-brand">
+                <h1>
+                    A Helping Paw
+                </h1>
+            </div>
+            <div class="col-md-6 col-sm-12 float-md-right"> 
+                <!--Buttton foruser to go to Sign Up page-->
+                <button type="button" onclick="window.location.href='{{url_for('mysearch')}}'" class="btn-lg btn-sm-md btn-outline-dark pr-3 float-md-right">Home Page</button>
+                
+                <!--Buttton foruser to go to Sign Up page-->
+                <button type="button" onclick="window.location.href='{{url_for('add_user')}}'" class="btn-lg btn-sm-md btn-outline-dark pr-3 float-md-right">Sign Up</button>
+                        
+                <!--Button for user to go to Log In page-->
+                <button type="button" onclick="window.location.href='{{url_for('login')}}'" class=" btn-lg btn-outline-dark float-md-right">Login</button>
+            </div>
+        </div>
     </div>
     
-    <div>
-        <!--Button to add new user account-->
-        <button type="submit" name="action">Add User</button>
+    <<div class="container">
+        <!--Form for user to enter their particular to sign up account-->
+        <form action="{{ url_for('insert_user') }}" method="POST" >
+             <div>
+                <label>User Name</label>
+                <input id="userName" name="userName" type="text" required><br>
+                <label>User Email</label>
+                <input id="userEmail" name="userEmail" type="email" required><br>
+                <label>User Contact</label>
+                <input id="userContact" name="userContact" type="tel" required><br>
+            </div>
+            
+            <div>
+                <!--Button to add new user account-->
+                <button type="submit" name="action">Add User</button>
+            </div>
+        </form>
     </div>
-</form>
+
+    <div class="mb-5"></div>
+    <!-- JavaScript -->
+    <!-- jQuery first, then Popper.js, then Bootstrap JS -->
+    <script src="https://code.jquery.com/jquery-3.4.1.slim.min.js" integrity="sha384-J6qa4849blE2+poT4WnyKhv5vZF5SrPo0iEjwBvKU7imGFAV0wwj1yYfoRSJoZ+n" crossorigin="anonymous"></script>
+    <script src="https://cdn.jsdelivr.net/npm/popper.js@1.16.0/dist/umd/popper.min.js" integrity="sha384-Q6E9RHvbIyZFJoft+2mJbHaEWldlvI9IOYy5n3zV9zzTtmI3UksdQRVvoxMfooAo" crossorigin="anonymous"></script>
+    <script src="https://stackpath.bootstrapcdn.com/bootstrap/4.4.1/js/bootstrap.min.js" integrity="sha384-wfSDF2E50Y2D1uUdj0O3uMBJnjuUD4Ih7YwaYd1iqfktj0Uod8GCExl3Og8ifwB6" crossorigin="anonymous"></script>
+  </body>
+</html>
